# qlandkarte-gt

./: BCPP_HOWTO  CMakeLists.txt  CPackConfig.cmake  Doxyfile  INSTALL  README.md  changelog.txt  licensecheck.pl  qlandkartegt.1  qlandkartegt.desktop  srtmconvert.py
MacOSX/: Info.plist.in  map2gcm-libs.sh  mklocversion.sh  modify-plist.sh  qlandkartegt-gdb.icns  qlandkartegt-gpx.icns  qlandkartegt-kml.icns  qlandkartegt-loc.icns  qlandkartegt-plt.icns  qlandkartegt-qlb.icns  qlandkartegt-rte.icns  qlandkartegt-tcx.icns  qlandkartegt-wpt.icns  qlandkartegt.icns
Win32/: README
include/garmin/: IDevice.h
include/libexif/: _stdint.h
nsi/: 3rdparty.txt  GTinstaller.nsi  License.rtf  copyfiles.bat
src/: CActions.cpp  CActions.h  CAppOpts.h  CApplication.cpp  CApplication.h  CCanvas.cpp  CCanvas.h  CCanvasUndoCommandZoom.cpp  CCanvasUndoCommandZoom.h  CCopyright.cpp  CCopyright.h  CCreateMapFineTune.cpp  CCreateMapFineTune.h  CCreateMapGeoTiff.cpp  CCreateMapGeoTiff.h  CCreateMapGridTool.cpp  CCreateMapGridTool.h  CCreateMapQMAP.cpp  CCreateMapQMAP.h  CDBus.cpp  CDBus.h  CDeviceGPSD.cpp  CDeviceGPSD.h  CDeviceGarmin.cpp  CDeviceGarmin.h  CDeviceGarminBulk.cpp  CDeviceGarminBulk.h  CDeviceMagellan.cpp  CDeviceMagellan.h  CDeviceNMEA.cpp  CDeviceNMEA.h  CDeviceQLandkarteM.cpp  CDeviceQLandkarteM.h  CDeviceTwoNav.cpp  CDeviceTwoNav.h  CDiary.cpp  CDiary.h  CDiaryDB.cpp  CDiaryDB.h  CDiaryEdit.cpp  (+409 more)
src/locale/: qlandkartegt_cs.ts  qlandkartegt_de.ts  qlandkartegt_es_ES.ts  qlandkartegt_fr.ts  qlandkartegt_it_IT.ts  qlandkartegt_nl.ts  qlandkartegt_ru.ts
src/skybox/: index.html  sky.xcf
src/typ/: arterialroad.xpm  majorhighway.xpm  principalhighway.xpm  railroad.xpm
